# void-relay-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  appsettings.json
src/: config.rs  database.rs  error.rs  lib.rs  main.rs
src/api/: discord_client.rs  mod.rs  ss14client.rs  utilities.rs
src/bot/: mod.rs  utilities.rs
src/bot/commands/: ban.rs  mod.rs  notes.rs  whitelist.rs  whitelistadd.rs  whitelistrm.rs
src/database/: mod.rs
