[package]
name = "void_relay"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE.TXT"
authors = ["JerryImMouse"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
serenity = "0.12"
env_logger = "0.11.6"
log = "0.4.24"
sqlx = { version = "0.8.3", features = [
    "postgres", 
    "runtime-tokio", 
    "uuid", "derive", 
    "chrono", 
    "ipnetwork"
    ]}
reqwest = { version = "0.12.2" }
uuid = "1.11.1"
chrono = "0.4.39"
rand = "0.8.5"
